reformatted university affiliation

--- a/header.tex
+++ b/header.tex
@@ -75,7 +75,7 @@
 
 \preauthor{\begin{flushleft}
 					\large \lineskip 0.2em \usefont{OT1}{phv}{b}{sl} \color{lg}}
-\author{Horea Christian\protect\endnote[1]{Department of Experimental Psychology, Oxford University, Oxford, UK.}\textsuperscript{,}\protect\endnote[2]{Interdisciplinary Centre for Neurosciences (IZN), University of Heidelberg, INF 364 69120 Heidelberg, Germany.}
+\author{Horea Christian\protect\endnote[1]{Department of Experimental Psychology, University of Oxford, Oxford, UK.}\textsuperscript{,}\protect\endnote[2]{Interdisciplinary Centre for Neurosciences (IZN), University of Heidelberg, INF 364 69120 Heidelberg, Germany.}
 		} % Authors' names go here
 \postauthor{\par\end{flushleft}\HorRule}
 
